[gd_scene load_steps=5 format=3 uid="uid://bq8c11xjf1nct"]

[ext_resource type="Script" uid="uid://bfhjoptvad3x0" path="res://Scripts/main_menu.gd" id="1_2vk4l"]
[ext_resource type="Theme" uid="uid://cf6o5io44h03f" path="res://Elemental Adventure theme.tres" id="1_f10x6"]
[ext_resource type="Texture2D" uid="uid://48wvoyua3q5h" path="res://Sprites/fire.png" id="3_cp0ys"]
[ext_resource type="FontFile" uid="uid://dsgyxibyhxj10" path="res://PressStart2P.ttf" id="3_his25"]

[node name="Main Menu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_2vk4l")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_f10x6")

[node name="Title" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.497917
anchor_top = 0.0925926
anchor_right = 0.497917
anchor_bottom = 0.0925926
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme = ExtResource("1_f10x6")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Title"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 504.0
offset_top = -76.0
offset_right = 938.0
offset_bottom = 356.0
grow_horizontal = 0
scale = Vector2(0.424043, 0.419502)
theme = ExtResource("1_f10x6")
texture = ExtResource("3_cp0ys")

[node name="Tittle" type="Label" parent="Title"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -475.001
offset_top = -2.00001
offset_right = 474.999
offset_bottom = 48.0
grow_horizontal = 2
theme = ExtResource("1_f10x6")
text = "Elemental Adventure"
horizontal_alignment = 1

[node name="Credits" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -30.0
offset_right = 570.0
grow_vertical = 0
scale = Vector2(0.811, 1)
theme = ExtResource("1_f10x6")
theme_override_font_sizes/font_size = 30
text = "make by Michael2911"

[node name="main menu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -279.0
offset_top = -153.0
offset_right = 279.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_f10x6")
alignment = 1

[node name="Play" type="Button" parent="main menu"]
layout_mode = 2
theme = ExtResource("1_f10x6")
theme_override_fonts/font = ExtResource("3_his25")
text = "play"

[node name="Online" type="Button" parent="main menu"]
layout_mode = 2
theme = ExtResource("1_f10x6")
theme_override_fonts/font = ExtResource("3_his25")
text = "Multiplayer"

[node name="option" type="Button" parent="main menu"]
layout_mode = 2
theme = ExtResource("1_f10x6")
theme_override_fonts/font = ExtResource("3_his25")
text = "Options"

[node name="exit" type="Button" parent="main menu"]
layout_mode = 2
theme = ExtResource("1_f10x6")
theme_override_fonts/font = ExtResource("3_his25")
text = "Exit"

[node name="Options" type="VBoxContainer" parent="."]
visible = false
offset_left = 694.0
offset_top = 547.0
offset_right = 1252.0
offset_bottom = 605.0

[node name="Label" type="Label" parent="Options"]
layout_mode = 2
theme = ExtResource("1_f10x6")
text = "SFX"

[node name="Volume" type="HSlider" parent="Options"]
layout_mode = 2
max_value = 0.8
step = 0.001

[node name="Label2" type="Label" parent="Options"]
layout_mode = 2
theme = ExtResource("1_f10x6")
text = "Music"

[node name="Volume 2" type="HSlider" parent="Options"]
layout_mode = 2
max_value = 0.8
step = 0.001

[node name="CheckButton" type="CheckButton" parent="Options"]
layout_mode = 2
theme = ExtResource("1_f10x6")
text = "FullScreen"

[node name="delete data" type="Button" parent="Options"]
layout_mode = 2
theme = ExtResource("1_f10x6")
theme_override_fonts/font = ExtResource("3_his25")
text = "Delete data
"

[node name="Back" type="Button" parent="Options"]
layout_mode = 2
theme = ExtResource("1_f10x6")
theme_override_fonts/font = ExtResource("3_his25")
text = "Back"

[connection signal="pressed" from="main menu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="main menu/Online" to="." method="_on_online_pressed"]
[connection signal="pressed" from="main menu/option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="main menu/exit" to="." method="_on_exit_pressed"]
[connection signal="value_changed" from="Options/Volume" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Options/Volume 2" to="." method="_on_volume_2_value_changed"]
[connection signal="toggled" from="Options/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="Options/delete data" to="." method="_on_delete_data_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_back_pressed"]
